# nazgul

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
nazgul/: __init__.py  _version.py  fit.py  nazgul.py
nazgul/stan_models/: __init__.py  amplitude_parameters.stan  amplitude_priors.stan  amplitude_transformed_parameters.stan  data.stan  ea_earth_amp.stan  ea_earth_parameter_ops.stan  earth_occ_amp.stan  earth_occ_parameter_ops.stan  earth_occ_parameters.stan  earth_occ_transform_data.stan  earth_occ_transform_data_ops.stan  effective_area_amp.stan  effective_area_model_dec.stan  effective_area_parameter_ops.stan  effective_area_parameters.stan  functions.stan  known_effective_area_model.stan  known_effective_area_transformed_data.stan  model_builder.py  nazgul_ea_earth.stan  nazgul_earth_occ.stan  nazgul_effective_area.stan  nazgul_known_effective_area.stan  nazgul_standard.stan  rff.stan  rff_bw.stan  rff_bw_ipn.stan  rff_ipn.stan  rff_omega.stan  rff_omega_ipn  rff_omega_ipn.hpp  rff_omega_ipn.stan  rff_omega_ipn_cos.stan  rff_omega_ipn_earth.stan  stan_builder.py  stan_models.py  standard_amp.stan  standard_likelihood.stan  standard_model_dec.stan  (+6 more)
nazgul/test/: basic_test.py
